[package]
    name = "curves"
    version = "0.1.0"
    edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    log = { version = "*"}
    flexi_logger = "*"
    winit = "*"
    enum-iterator = "*"
    ash = { version = "*", features = [ "linked" ] }
    shaderc = "*"
    imgui = "0.11.0"
    minmath = { version = "*", git = "https://github.com/adihodos/minmath.git", branch = "main" }
